{
  "version": 4,
  "terraform_version": "1.5.6",
  "serial": 24,
  "lineage": "6429699f-1473-a541-62fe-858ec340162b",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:495376291974:network-acl/acl-0bc92373082f1a23c",
            "default_network_acl_id": "acl-0bc92373082f1a23c",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0bc92373082f1a23c",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "495376291974",
            "subnet_ids": [
              "subnet-014af50204f28c392",
              "subnet-0457f5781c108bb66",
              "subnet-05ea20c24547346de",
              "subnet-0e8e665847c214e11"
            ],
            "tags": {
              "Environment": "dev",
              "Name": "Vpc-module-default",
              "Team": "dev",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "Vpc-module-default",
              "Team": "dev",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0228b6fbbceea53aa"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:495376291974:route-table/rtb-0a77a0d493792a27d",
            "default_route_table_id": "rtb-0a77a0d493792a27d",
            "id": "rtb-0a77a0d493792a27d",
            "owner_id": "495376291974",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "Vpc-module-default",
              "Team": "dev",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "Vpc-module-default",
              "Team": "dev",
              "Terraform": "true"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0228b6fbbceea53aa"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:495376291974:security-group/sg-06675e9f5634a888f",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-06675e9f5634a888f",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "495376291974",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "Vpc-module-default",
              "Team": "dev",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "Vpc-module-default",
              "Team": "dev",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0228b6fbbceea53aa"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0cdd5b2b1f3d8aa3a",
            "domain": "vpc",
            "id": "eipalloc-0cdd5b2b1f3d8aa3a",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-44-213-20-3.compute-1.amazonaws.com",
            "public_ip": "44.213.20.3",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Name": "Vpc-module-us-east-1a",
              "Team": "dev",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "Vpc-module-us-east-1a",
              "Team": "dev",
              "Terraform": "true"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0244f68c0b2d2e479",
            "domain": "vpc",
            "id": "eipalloc-0244f68c0b2d2e479",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-44-219-47-149.compute-1.amazonaws.com",
            "public_ip": "44.219.47.149",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Name": "Vpc-module-us-east-1b",
              "Team": "dev",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "Vpc-module-us-east-1b",
              "Team": "dev",
              "Terraform": "true"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:495376291974:internet-gateway/igw-0dfd23777c6d472ae",
            "id": "igw-0dfd23777c6d472ae",
            "owner_id": "495376291974",
            "tags": {
              "Environment": "dev",
              "Name": "Vpc-module",
              "Team": "dev",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "Vpc-module",
              "Team": "dev",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0228b6fbbceea53aa"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0cdd5b2b1f3d8aa3a",
            "association_id": "eipassoc-0ec57f80bd01135cd",
            "connectivity_type": "public",
            "id": "nat-09a31a9f36b4b8042",
            "network_interface_id": "eni-0e9c9b9d80fb83ac2",
            "private_ip": "10.0.101.169",
            "public_ip": "44.213.20.3",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0e8e665847c214e11",
            "tags": {
              "Environment": "dev",
              "Name": "Vpc-module-us-east-1a",
              "Team": "dev",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "Vpc-module-us-east-1a",
              "Team": "dev",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0244f68c0b2d2e479",
            "association_id": "eipassoc-0bb4fd19b5e7692fb",
            "connectivity_type": "public",
            "id": "nat-06e11540a1f28a2e6",
            "network_interface_id": "eni-006ea73615bd6a269",
            "private_ip": "10.0.102.157",
            "public_ip": "44.219.47.149",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-014af50204f28c392",
            "tags": {
              "Environment": "dev",
              "Name": "Vpc-module-us-east-1b",
              "Team": "dev",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "Vpc-module-us-east-1b",
              "Team": "dev",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-03899b03c928dbbe61080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-09a31a9f36b4b8042",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-03899b03c928dbbe6",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0fd9c6c2cf819ad461080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-06e11540a1f28a2e6",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0fd9c6c2cf819ad46",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0dfd23777c6d472ae",
            "id": "r-rtb-0be9248dfeb63ad441080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0be9248dfeb63ad44",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:495376291974:route-table/rtb-03899b03c928dbbe6",
            "id": "rtb-03899b03c928dbbe6",
            "owner_id": "495376291974",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "Vpc-module-private-us-east-1a",
              "Team": "dev",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "Vpc-module-private-us-east-1a",
              "Team": "dev",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0228b6fbbceea53aa"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:495376291974:route-table/rtb-0fd9c6c2cf819ad46",
            "id": "rtb-0fd9c6c2cf819ad46",
            "owner_id": "495376291974",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "Vpc-module-private-us-east-1b",
              "Team": "dev",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "Vpc-module-private-us-east-1b",
              "Team": "dev",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0228b6fbbceea53aa"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:495376291974:route-table/rtb-0be9248dfeb63ad44",
            "id": "rtb-0be9248dfeb63ad44",
            "owner_id": "495376291974",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "Vpc-module-public",
              "Team": "dev",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "Vpc-module-public",
              "Team": "dev",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0228b6fbbceea53aa"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05415b43df9294e1f",
            "route_table_id": "rtb-03899b03c928dbbe6",
            "subnet_id": "subnet-0457f5781c108bb66"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a2eb09356b7c2303",
            "route_table_id": "rtb-0fd9c6c2cf819ad46",
            "subnet_id": "subnet-05ea20c24547346de"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09815e6d84ae8c497",
            "route_table_id": "rtb-0be9248dfeb63ad44",
            "subnet_id": "subnet-0e8e665847c214e11"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05ef1f6f29acce635",
            "route_table_id": "rtb-0be9248dfeb63ad44",
            "subnet_id": "subnet-014af50204f28c392"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:495376291974:subnet/subnet-0457f5781c108bb66",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0457f5781c108bb66",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "495376291974",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "Vpc-module-private-us-east-1a",
              "Team": "dev",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "Vpc-module-private-us-east-1a",
              "Team": "dev",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0228b6fbbceea53aa"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:495376291974:subnet/subnet-05ea20c24547346de",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05ea20c24547346de",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "495376291974",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "Vpc-module-private-us-east-1b",
              "Team": "dev",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "Vpc-module-private-us-east-1b",
              "Team": "dev",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0228b6fbbceea53aa"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:495376291974:subnet/subnet-0e8e665847c214e11",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e8e665847c214e11",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "495376291974",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "Vpc-module-public-us-east-1a",
              "Team": "dev",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "Vpc-module-public-us-east-1a",
              "Team": "dev",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0228b6fbbceea53aa"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:495376291974:subnet/subnet-014af50204f28c392",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-014af50204f28c392",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "495376291974",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "Vpc-module-public-us-east-1b",
              "Team": "dev",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "Vpc-module-public-us-east-1b",
              "Team": "dev",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0228b6fbbceea53aa"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:495376291974:vpc/vpc-0228b6fbbceea53aa",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0bc92373082f1a23c",
            "default_route_table_id": "rtb-0a77a0d493792a27d",
            "default_security_group_id": "sg-06675e9f5634a888f",
            "dhcp_options_id": "dopt-0feb3a0ca40bd98dc",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0228b6fbbceea53aa",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a77a0d493792a27d",
            "owner_id": "495376291974",
            "tags": {
              "Environment": "dev",
              "Name": "Vpc-module",
              "Team": "dev",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "Vpc-module",
              "Team": "dev",
              "Terraform": "true"
            }
          }
        }
      ]
    }
  ]
}